--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: action
         run: |
+          sudo apt-get install libsfml-dev
           mkdir build
           cd build
           cmake ..
