--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(HW2)
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(sfml)
+find_package(SFML 2.5.1 COMPONENTS graphics audio REQUIRED)
 find_package(OpenGL)
 include_directories(${SFML_INCLUDE_DIRECTORIES})
 
