--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: Arch
+    runs-on: archlinux
     steps:
       - uses: actions/checkout@v2
       - name: action
